updated planetary info for 2018

--- a/index.html
+++ b/index.html
@@ -110,10 +110,9 @@
 			var template = _.template(
 				"You are looking at planet Mercury." + "<br>" +
 				"Mercury will be retrograde:" + "<br>" +
-				"I. Dec 19 (2016) - Jan 8"  + "<br>" +
-				"II. Apr 10 - May 3" + "<br>" +
-				"III. Aug 13 - Sept 5" + "<br>" +
-				"IV. Dec 3 - Dec 23"
+				"I. Mar 22  - Apr 15"  + "<br>" +
+				"II. Jul 26 - Aug 19" + "<br>" +
+				"III. Nov 16 - Dec 6" + "<br>"
 			)
 			//append
 			$("#planet-info").append(template);
@@ -124,7 +123,7 @@
 		function renderVenus() {
 			var template = _.template(
 				"You are looking at planet Venus." + "<br>" +
-				"Venus will be retrograde Mar 5 - Apr 16"
+				"Venus will be retrograde Oct 5 - Nov 16"
 			)
 			//append
 			$("#planet-info").append(template);
@@ -144,7 +143,8 @@
 
 		function renderMars() {
 			var template = _.template(
-				"You are looking at planet Mars."
+				"You are looking at planet Mars." + "<br>" +
+				"Mars will be retrograde Jun 26 - Aug 27"
 			)
 			//append
 			$("#planet-info").append(template);
@@ -155,7 +155,7 @@
 		function renderJupiter() {
 			var template = _.template(
 				"You are looking at planet Jupiter." + "<br>" +
-				"Jupiter will be retrograde Feb 7 - Jun 10"
+				"Jupiter will be retrograde March 8 - Jul 10"
 			)
 			//append
 			$("#planet-info").append(template);
@@ -184,7 +184,7 @@
 		function renderUranus() {
 			var template = _.template(
 				"You are looking at planet Uranus." + "<br>" +
-				"Uranus will be retrograde Aug 4 - Jan 3 (2018)"
+				"Uranus will be retrograde Aug 7 - Jan 6 (2019)"
 			)
 			//append
 			$("#planet-info").append(template);
@@ -201,7 +201,7 @@
 		function renderNeptune() {
 			var template = _.template(
 				"You are looking at planet Neptune." + "<br>" +
-				"Neptune will be retrograde Jun 17 - Nov 23"
+				"Neptune will be retrograde Jun 18 - Nov 24"
 			)
 			//append
 			$("#planet-info").append(template);
@@ -213,7 +213,7 @@
 		function renderPluto() {
 			var template = _.template(
 				"You are looking at Pluto." + "<br>" +
-				"Pluto will be retrograde Apr 21 - Sept 29"
+				"Pluto will be retrograde Apr 22 - Sept 30"
 			)
 			//append
 			$("#planet-info").append(template);
